--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
 
-<div class="body">
+<div class="body1">
         <div class="container1">
 
               <div class="slider">
